# RVVM

./: .gitignore  .gitlab-ci.yml  .gitpod.yml  CMakeCache.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  rvvm.entitlements  rvvm_isolement.entitlements
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: build.yml  codeql.yml  release-x86_64-rv64.yml  release-x86_64.yml
src/: atomics.h  bit_ops.h  blk_io.c  blk_io.h  clint.c  clint.h  compiler.h  dlib.c  dlib.h  elf_load.c  elf_load.h  fdtlib.c  fdtlib.h  file.c  file.h  fpu_ops.h  gd32.c  hashmap.c  hashmap.h  main.c  mem_ops.h  networking.c  networking.h  ns16550a.c  ns16550a.h  plic.c  plic.h  ps2-altera.c  ps2-altera.h  ps2-mouse.c  ringbuf.c  ringbuf.h  riscv.h  riscv16.h  riscv32.c  riscv32.h  riscv32_csr.c  riscv32_csr.h  riscv32_csr_m.c  riscv32_csr_m.h  (+51 more)
src/bindings/jni/: rvvm_jni.c  tiny-jni.h
src/bindings/jni/lekkit/rvvm/: Framebuffer.java  GPIODevice.java  GoldfishRTC.java  HIDKeyboard.java  HIDMouse.java  I2CBus.java  IGPIODevice.java  IRemovableDevice.java  MMIOBase.java  MMIODevice.java  MTDFlash.java  NS16550A.java  NVMeDrive.java  PCIBus.java  PCIDevice.java  PLIC.java  RTL8169.java  RVVMMachine.java  RVVMNative.java  SiFiveGPIO.java  Syscon.java
src/bindings/libretro/: libretro.c  rvvm_libretro.info
src/bindings/macos_codesign/: codesign.sh  rvvm_debug.entitlements  rvvm_isolement.entitlements  rvvm_test.entitlements
src/cpu/: fpu_lib.h  riscv32_interpreter.c  riscv64_a.c  riscv64_c.c  riscv64_d.c  riscv64_f.c  riscv64_i.c  riscv64_interp.c  riscv64_interpreter.c  riscv64_m.c  riscv_a.c  riscv_atomics.h  riscv_base.h  riscv_c.c  riscv_compressed.h  riscv_cpu.c  riscv_cpu.h  riscv_d.c  riscv_f.c  riscv_fpu.h  riscv_i.c  riscv_interp.c  riscv_interp.h  riscv_interpreter.c  riscv_interpreter.h  riscv_jit.h  riscv_m.c
src/devices/: ata.c  ata.h  blk_dev.h  chardev.h  chardev_term.c  chardev_term.h  clint.c  clint.h  eth-oc.c  eth-oc.h  fb_window.c  fb_window.h  framebuffer.c  framebuffer.h  gpio-sifive.c  gpio-sifive.h  gpio_api.h  gui_window.c  gui_window.h  haiku_window.cpp  hid-keyboard.c  hid-mouse.c  hid_api.h  hid_dev.h  i2c-hid.c  i2c-hid.h  i2c-oc.c  i2c-oc.h  keymap.h  mtd-physmap.c  mtd-physmap.h  ns16550a.c  ns16550a.h  nvme.c  nvme.h  pci-bus.c  pci-bus.h  pci-vfio.c  pci-vfio.h  plic.c  (+29 more)
src/libretro/: libretro.c
src/rvjit/: rvjit.c  rvjit.h  rvjit_arm.h  rvjit_arm64.h  rvjit_emit.c  rvjit_emit.h  rvjit_riscv.h  rvjit_x86.h
